# shax

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.browser.ts  vitest.config.ts
.claude/agents/: ai-engineer.md  core-engineer.md  frontend-engineer.md  orchestrator.md
.claude/skills/: README.md
.claude/skills/osc133-shell-integration/: SKILL.md
.claude/skills/shax-formatter-authoring/: SKILL.md
.claude/skills/tauri-pty-bridge/: SKILL.md
.github/workflows/: ci.yml
design/: .thumbnail  README.md  Shax Main Shell.dc.html  Shax Terminal.html
docs/: branching-and-workflow.md  community-formatters.md
e2e/: smoke.spec.ts
specs/: 00-overview.md  01-architecture.md  02-rendering-two-path.md  03-blocks-and-osc133.md  04-multiplexing.md  05-search-and-data-model.md  06-file-viewer.md  07-formatters.md  08-interactive-widgets.md  09-ai-assistant-and-auth.md  10-safety-and-permissions.md  11-tech-stack-and-conventions.md  12-roadmap-milestones.md  13-design.md  14-pane-commands.md  m0-scaffolding.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/shell-integration/: shax.bash  shax.fish  shax.zsh
src-tauri/src/: lib.rs  main.rs  preferences.rs
src-tauri/src/agent/: anthropic.rs  claude_cli.rs  config.rs  history.rs  keychain.rs  mod.rs  ollama.rs  sse.rs
src-tauri/src/blocks/: mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/mux/: mod.rs
src-tauri/src/pty/: error.rs  mod.rs
src-tauri/src/safety/: mod.rs
src-tauri/src/search/: backfill.rs  embedding.rs  mod.rs  onnx.rs
src-tauri/src/store/: mod.rs
src-tauri/src/vt/: mod.rs
src/ansi/: AnsiSpans.tsx  sgr.test.ts  sgr.ts
src/assets/: ShaxMark.tsx
src/assistant/: AssistantDockDivider.test.tsx  AssistantDockDivider.tsx  AssistantOverlay.css  AssistantOverlay.test.tsx  AssistantOverlay.tsx  ChatMarkdown.css  ChatMarkdown.test.tsx  ChatMarkdown.tsx  features.test.ts  features.ts  history.ts  provider.ts  providerFactory.test.ts  providerFactory.ts  tools.test.ts  tools.ts
src/assistant/providers/claude/: apiKey.test.ts  apiKey.ts  subscription.test.ts  subscription.ts
src/assistant/providers/ollama/: ollama.test.ts  ollama.ts
src/formatters/: cat.test.tsx  cat.tsx  detectJson.test.ts  detectJson.ts  gitArgs.test.ts  gitArgs.ts  gitDiff.tsx  gitStatus.tsx  index.ts  json.test.tsx  json.tsx  ls.test.ts  ls.tsx  parseGitDiff.test.ts  parseGitDiff.ts  parseGitStatus.test.ts  parseGitStatus.ts  registry.test.ts  registry.ts  types.ts
src/formatters/sandbox/: createSandboxed.tsx  loader.ts  manifest.test.ts  manifest.ts  render.tsx  schema.test.ts  schema.ts  workerEntry.test.ts  workerEntry.ts  workerHost.browser.test.ts  workerHost.ts
src/formatters/sandbox/samples/: wc.ts
src/lib/: AssistantDockContext.tsx  HomeDirContext.tsx  ipc.ts  shellTokenize.ts
src/metadata/: buildMetadata.ts  renderMetadata.tsx  types.ts
src/metadata/sections/: file.test.ts  file.ts  gif.test.ts  gif.ts  jpeg.test.ts  jpeg.ts  png.test.ts  png.ts  text.ts
src/panes/: BlockList.test.tsx  BlockList.tsx  BlockRow.css  BlockRow.test.tsx  BlockRow.tsx  BlockViewerModal.tsx  DevStatusBar.tsx  LayoutRender.tsx  PromptStrip.test.tsx  PromptStrip.tsx  SearchOverlay.test.tsx  SearchOverlay.tsx  Statusline.test.tsx  Statusline.tsx  TerminalPane.test.tsx  TerminalPane.tsx  TitleBar.test.tsx  TitleBar.tsx  blockFocus.test.ts  blockFocus.ts  blockFormat.test.ts  blockFormat.ts  blockReducer.test.ts  blockReducer.ts  keyToBytes.test.ts  keyToBytes.ts  layout.test.ts  layout.ts  promptRenderer.test.ts  promptRenderer.ts  xtermTheme.test.ts  xtermTheme.ts
src/safetyGate/: SafetyGate.test.tsx  SafetyGate.tsx  policy.test.ts  policy.ts
src/settings/: SettingsModal.test.tsx  SettingsModal.tsx  config.ts
src/theme/: preferences.ts  syntax.css  theme.test.ts  theme.ts  tokens.css
src/viewer/: BlockViewerModal.test.tsx  BlockViewerModal.tsx  ContentView.tsx  HexView.test.tsx  HexView.tsx  ImageView.test.tsx  ImageView.tsx  MarkdownView.css  MarkdownView.test.tsx  MarkdownView.tsx  Viewer.tsx  detectContentType.test.ts  detectContentType.ts  detectLanguage.test.ts  detectLanguage.ts  index.ts  stripAnsi.test.ts  stripAnsi.ts
src/widgets/: index.ts
src/widgets/gitDiff/: GitDiffWidget.test.tsx  GitDiffWidget.tsx  promotionGate.test.ts  promotionGate.ts
src/widgets/gitStatus/: GitStatusWidget.test.tsx  GitStatusWidget.tsx  promotionGate.test.ts  promotionGate.ts
src/widgets/ls/: LsWidget.test.tsx  LsWidget.tsx  promotionGate.test.ts  promotionGate.ts
