[package]
name = "shax"
version = "0.1.0"
description = "Shax: a structured, searchable, AI-assisted terminal."
authors = ["Shax contributors"]
edition = "2021"

[lints.clippy]
all = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "io-util", "time"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
base64 = "0.22.1"
vte = "0.15.0"
tempfile = "3.27.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

